# rustpill

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/shell/: .welcome.sh  .zshrc
.github/workflows/: CI.yml
.zed/: settings.json
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: lib.rs
host/: Cargo.toml  README.md  pyproject.toml  rustpill_clients.pyi  test.py
host/src/: adc.rs  bare.rs  common.rs  flash.rs  heater.rs  lib.rs  log.rs  runtime.rs  servo.rs  stepper.rs
host/src/hosts/: minimal.rs  mod.rs  servo.rs
macros/: Cargo.toml
macros/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: adc.rs  heater.rs  lib.rs  minimal.rs  servo.rs  utils.rs
rustpill_clients/: Cargo.toml  README.md  pyproject.toml  rustpill_clients.pyi  test.py
rustpill_clients/src/: common.rs  lib.rs  servo.rs
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs  s3.rs
