cargo-features = ["per-package-target"]

[package]
name = "firmware"
version.workspace = true
edition.workspace = true
forced-target = "thumbv7m-none-eabi"
license-file.workspace = true
description = "Firmware binaries"
repository.workspace = true

[dependencies]
cortex-m = { workspace = true, features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = { workspace = true }
embassy-stm32 = { workspace = true, features = [
    "defmt",
    "stm32f103c8",
    "unstable-pac",
    "memory-x",
    "time-driver-tim1",
] }
embassy-sync = { workspace = true, features = ["defmt"] }
embassy-executor = { workspace = true, features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { workspace = true, features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { workspace = true, features = ["defmt"] }
embassy-futures = { workspace = true }
postcard = { workspace = true }
postcard-rpc = { workspace = true, features = ["embassy-usb-0_4-server"] }
postcard-schema = { workspace = true, features = ["derive"] }

protocol = { workspace = true }

defmt = { workspace = true }
defmt-rtt = { workspace = true }

embedded-hal = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }
heapless = { workspace = true }
nb = { workspace = true }
static_cell = { workspace = true }
defmt-brtt = { version = "0.1.1", features = ["async-await"] }
