[package]
name = "rustpill_clients"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
doc = false

[dependencies]
env_logger = "0.11.8"
postcard-rpc = { version = "0.11.9", features = ["use-std", "raw-nusb"] }
postcard-schema = { version = "0.2.1", features = ["derive"] }
protocol = { version = "0.1.0", path = "../protocol", features = ["use-std"] }
pyo3 = { version = "0.24.1", features = [
    "extension-module",
    "experimental-async",
] }
pyo3-log = "0.12.3"
pyo3-stub-gen = "0.7.0"
pyo3-stub-gen-derive = "0.7.0"
tokio = { version = "1.44.2", features = ["macros", "time", "rt-multi-thread"] }
