[package]
name = "host"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Python bindings for RustPill"
repository.workspace = true

[lib]
name = "rustpill_clients"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
doc = false

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
postcard-rpc = { workspace = true, features = ["use-std", "raw-nusb"] }
postcard-schema = { workspace = true, features = ["derive"] }

protocol = { workspace = true, features = ["use-std"] }
macros = { workspace = true }
xtask = { workspace = true }

pyo3 = { workspace = true, features = [
    "extension-module",
    "experimental-async",
    "abi3-py39",
] }
pyo3-async-runtimes = { workspace = true, features = [
    "attributes",
    "tokio-runtime",
] }
pyo3-log = { workspace = true }
pyo3-stub-gen = { workspace = true }
pyo3-stub-gen-derive = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "time",
    "rt-multi-thread",
    "fs",
] }
serde = { workspace = true }
defmt-decoder = "1.0.0"
anyhow = "1.0.98"
