[project]
name = "rustpill"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"
