[package]
name = "protocol"
version.workspace = true
edition.workspace = true

[dependencies]
postcard-rpc = { version = "0.11.8", git = "https://github.com/sjoerdsimons/postcard-rpc/", branch = "dynamic-eps" }
postcard-schema = { version = "0.2.1", features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[features]
use-std = []
