[package]
name = "protocol"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Type definitions for Postcard RPC protocol"
repository.workspace = true

[dependencies]
postcard-rpc = { workspace = true }
postcard-schema = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }

[features]
use-std = []
