[package]
name = "protocol"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Type definitions for Postcard RPC protocol"
repository.workspace = true

[dependencies]
postcard-rpc = { workspace = true }
postcard-schema = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }
pyo3-stub-gen-derive = { workspace = true, optional = true }

[features]
use-std = ["dep:pyo3-stub-gen", "dep:pyo3-stub-gen-derive", "dep:pyo3"]
