[package]
name = "rustpill_clients"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
doc = false

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
postcard-rpc = { workspace = true, features = ["use-std", "raw-nusb"] }
postcard-schema = { workspace = true, features = ["derive"] }
protocol = { workspace = true, features = ["use-std"] }
pyo3 = { workspace = true, features = [
    "extension-module",
    "experimental-async",
    "abi3-py39",
] }
pyo3-log = { workspace = true }
pyo3-stub-gen = { workspace = true }
pyo3-stub-gen-derive = { workspace = true }
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
